# SwordigoDesktop

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CLEANUP_REPORT.md  CMakeLists.txt  Makefile  MiniAPI_Buttons_findings.md  README.md  RELEASE_NOTES_v3.0r.md  RELEASE_NOTES_v4.0r.md  RELEASE_NOTES_v4.5r.md  RELEASE_NOTES_v5.0.md  RELEASE_NOTES_v6.0.md  RELEASE_NOTES_v6.5.md  RELEASE_NOTES_v7.0.md  RELEASE_NOTES_v7.1.md  RELEASE_NOTES_v7.2.md  compile_shaders.sh  imgui.ini  instx.sh  run_swordigo.sh  symbols_1.1.txt  symbols_1.4.6.txt
.agents/: AGENTS.md
assets/: README
builder/: CMakeLists.txt  build_rpm.sh  generate_manifest.sh  package.sh
builder/appimage/: build_appimage.sh
docs/: SCHEMA.md
documentation/: README.md  architecture.md  data-layout.md  gui-api.md  lua-api.md  music-api.md  postfx.md  save-format.md  shortcuts.md
documentation/formats/: pod-format.md  scene-format.md
engine/: manifest.json
engine/rl-v6.6/: README_rls.md
exptsrc/: main.cpp
exptsrc/game/: mod_config.h  save_editor_logic.h
exptsrc/jni/: jni_bridge.h  jni_bridge_arm64.h  jni_layer_arm64.h  jni_marshaller.cpp  jni_shim.c
exptsrc/loader/: arch_detect.h
exptsrc/platform/: IconsFontAwesome6.h  data_path.h  display.h  emulator.h  emulator_arm64.h  emulator_dynarmic64.cpp  fbo_scaler.h  gl_inc.h  gui.cpp  i_emulator_arm64.h  input_config.cpp  input_config.h  io_thread.cpp  launcher.h  test_save_editor.cpp  vulkan_backend.cpp
exptsrc/sre/: sre_background.c  sre_hooks_stubs.c  sre_init.c  sre_lua.c  sre_lua.h  sre_lua_libs.c  sre_mini_api.c
exptsrc/tools/: asset_viewer.cpp  av_audio.h  scene_loader.cpp  scene_loader.h
modapi/: binary-selector.md  building.md  debug-overlay.md  fbo-scaler.md  input-system.md  mod-config.md  modding-guide.md  overlay.md  sre-hooks.md  vfs-api.md
modapi/formats/: protobuf-wire.md  pvr-format.md
old/src_V7.1/: launcher_ui.cpp  loader_test.cpp  main.cpp
old/src_V7.1/android/: asset_manager.h  log.c
old/src_V7.1/game/: mod_config.cpp  mod_tools.cpp  sky_renderer.h
old/src_V7.1/jni/: jni_bridge_arm64.cpp
old/src_V7.1/loader/: elf_loader.h  elf_types.h  elf_types_arm64.h
old/src_V7.1/platform/: binary_selector.cpp  display.cpp  emulator_dynarmic64.h  fbo_scaler.cpp  launcher_ui.h  srt_overlay.h  vulkan_backend.h
old/src_V7.1/sre/: sre_gui.h  sre_init.c  sre_lua_libs.c  sre_mod.c  sre_scene_update.c  sre_setjmp.S  sre_setjmp.h
old/src_v7/: main.cpp
old/src_v7/game/: save_editor_logic.cpp
old/src_v7/loader/: elf_loader.cpp  elf_loader_arm64.h  loader.c
old/src_v7/main/: main.c
old/src_v7/platform/: draw_batcher.h  fbo_scaler.cpp  gui.h  protobuf_reader.h  pvr_loader.cpp  pvr_loader.h  srt_overlay.cpp  vulkan_shaders.glsl.h
old/src_v7/prototype/: loader_arm.c
old/src_v7/sre/: sre_effects.c
old/src_v7/tools/: av_renderer.h  pod_loader.cpp
res/layout/: activity_main.xml
res/menu/: main.xml
research/: agent_messages.txt  android_dependencies.md  arm_execution_options.md  boot_observations_log.md  boot_prototype_status.md  boot_sequence.md  crash_investigation_handoff.md  data_dependency_map.md  development_progress_log.md  elf_relocation_smoking_gun.md  elf_relocation_type_inventory.md  engine_intelligence_report.md  engine_introspection_plan.md  first_frame_render_checklist.md  first_frame_roadmap.md  gles_boot_matrix.md  initial_bootstrap_findings.md  jni_compatibility_findings.md  jni_export_diff.md  library_initialization_map.md  linux_compatibility_hypotheses.md  linux_loader_design.md  lua_api_inventory.md  lua_command_catalog.md  lua_debug_console.md  lua_execute_string_poc.md  lua_runtime_map.md  lua_script_recon.md  memory_crash_elimination_handoff.md  mission_7a_crash_analysis.md  mission_7a_final_summary.md  mission_7a_investigation_complete.md  mission_8a_memory_audit.md  native_engine_map.md  native_symbol_map.md  packaging_audit.md  pod_pipeline.md  pointer_provenance_trace.md  protobuf_schema.md  questions.md  (+31 more)
research/experiments/: experiment_001.md
rl_builder/: Makefile
src/: launcher_ui.cpp  loader_test.cpp  main.cpp
src/android/: asset_manager.c  asset_manager.h  log.h
src/assets/icons/: swmini_default.png~
src/game/: camera_override.cpp  camera_override.h  mod_tools.cpp  mod_tools.h
src/jni/: jni_bridge.cpp  jni_bridge_arm64.cpp  jni_layer.h  jni_shim.h
src/loader/: elf_loader.cpp  elf_loader.h  elf_loader_arm64.cpp  elf_loader_arm64.h  loader.h
src/platform/: binary_selector.cpp  binary_selector.h  data_path.cpp  data_path.h  display.cpp  display.h  emulator.cpp  emulator.h  emulator_arm64.cpp  emulator_arm64.h  emulator_dynarmic64.cpp  emulator_dynarmic64.h  fbo_scaler.cpp  fbo_scaler.h  gui.cpp  gui.h  input_config.cpp  input_config.h  io_thread.h  launcher.cpp  launcher.h  launcher_ui.cpp  launcher_ui.h  pvr_loader.cpp  save_editor.cpp  save_editor.h  scl_parser.cpp  scl_parser.h  vulkan_backend.cpp  vulkan_backend.h  vulkan_shaders_spirv.h
src/sre/: sre.h  sre_background.c  sre_effects.c  sre_gui.c  sre_gui_native.c  sre_init.c  sre_lua.c  sre_lua.h  sre_lua_libs.c  sre_mini_api.c  sre_mod.c  sre_music.c  sre_scene_update.c  sre_string.c  sre_vfs.c
src/tools/: asset_viewer.cpp  av_audio.cpp  av_renderer.cpp  pod_loader.h
web/: changelog.html  download.html  index.html  main.js  research.html  robots.txt  sitemap.xml  style.css  technical.html
